@@ -23,11 +23,14 @@ Added test to check that PHP files are being parsed as PHP.
 Added Parallels hard disk image format creation support. Available
 hard disk formats and their capabilities are now programmatically
 obtained through the VirtualBox API.
- 
+
 Minor translation fixes.
 
 Advanced acceleration options are now correctly hidden when
 enableAdvancedConfig is not set.
+
+Login form on console tab is now hidden if remote console
+authentication is set to None.
 
 -------------------------------------
 	4.1-2	2011-8-21
